clang/test/BSC/Negative/Ownership/Owned/owned_global_typedef/owned_global_typedef.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

typedef owned int ownInt; // expected-error {{type of 'int' cannot be qualified by 'owned'}}
ownInt a = 10;  //expected-error {{type of global variable cannot qualified by 'owned', 'ownInt' (aka 'owned int') contains 'owned' type}}

typedef struct A {
    owned int a; // expected-error {{type of 'int' cannot be qualified by 'owned'}}
}AA;

AA aa;  //expected-error {{type of global variable cannot qualified by 'owned'(even indirectly), 'AA' (aka 'struct A') contains 'owned' type}}

typedef owned struct B {
    int a;
}BB;

BB bb;  //expected-error {{type of global variable cannot qualified by 'owned', 'owned BB' (aka 'owned struct B') contains 'owned' type}}